# red

./: Cargo.toml  README.md
src/: cbs.rs  completion.rs  diagnostics.rs  dialogs.rs  fbr.rs  gui.rs  ls.rs  lsp.rs  main.rs  state.rs  term.rs  utils.rs
src/highlight/: colors.rs  cpp.rs  json.rs  markdown.rs  md.rs  mod.rs  rust.rs  toml.rs
src/term/: mod.rs  pty.rs  styles.rs  vte_parser.rs
