[package]
name = "red"
version = "0.1.0"
edition = "2021"

[dependencies]
fltk = "1.5.13"
fltk-theme = "0.7"
regex = "1.9.6"
notify = "5.1"
# optional deps
# term
fltk-term = { git = "https://github.com/fltk-rs/fltk-term", branch = "portable", optional = true }
# highlight
tree-sitter-highlight = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-md = { version = "0.3", optional = true }

[features]
default = ["highlight", "term"]
highlight = [
    "tree-sitter-highlight", 
    "tree-sitter-rust", 
    "tree-sitter-toml-ng", 
    "tree-sitter-md",
    ]
term = [
    "fltk-term"
]

[profile.release]
strip = true

[patch.crates-io]
fltk = { git = "https://github.com/fltk-rs/fltk-rs" }