[package]
name = "red"
version = "0.1.1"
edition = "2021"

[dependencies]
fltk = "1.5.14"
fltk-theme = "0.7"
notify = "8.2"
regex = "1.11"
# LSP + JSON
lsp-types = "0.95"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
anyhow = "1"
crossbeam-channel = "0.5"
# optional deps
# term
fltk-term = { version = "0.2.2", optional = true }
# highlight
tree-sitter-highlight = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-md = { version = "0.3", optional = true }

[features]
default = ["highlight", "term"]
highlight = [
    "tree-sitter-highlight", 
    "tree-sitter-rust", 
    "tree-sitter-toml-ng", 
    "tree-sitter-md",
    ]
term = ["fltk-term"]

[profile.release]
strip = true
