[package]
name = "red"
version = "0.1.3"
edition = "2021"
description = "A simple text editor written in Rust using FLTK"
license = "MIT"
repository = "https://github.com/MoAlyousef/red"

[dependencies]
fltk = "1.5.15"
fltk-theme = "0.7"
notify = "8.2"
regex = "1.11"
# LSP + JSON
lsp-types = { version = "0.95", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
# optional deps
# term
fltk-term = { version = "0.2.5", optional = true }
# highlight
tree-sitter-highlight = { version = "0.25", optional = true }
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-toml-ng = { version = "0.7", optional = true }
tree-sitter-md = { version = "0.3", optional = true }

[features]
default = ["highlight", "term", "lsp"]
highlight = [
    "tree-sitter-highlight", 
    "tree-sitter-rust", 
    "tree-sitter-toml-ng", 
    "tree-sitter-md",
    ]
term = ["fltk-term"]
lsp = ["lsp-types", "serde", "serde_json", "crossbeam-channel"]

[profile.release]
strip = true
